# research-project-example

./: .gitignore  README.md  main_training.py  pyproject.toml  requirements.txt
config/: train.yaml
research_project/: engine_training.py
research_project/models/: __init__.py  basic_model.py
research_project/utils/: metrics.py  metrics_printer.py  tracker.py
scripts/: download_dataset.py
